--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp32dev]
 platform = espressif32
-platform_packages = framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.5
+#platform_packages = framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.5
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
@@ -23,3 +23,4 @@ extra_scripts =
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.0.0
 	bblanchon/ArduinoJson@^6.21.2
+build_flags = -D PIO_FRAMEWORK_ARDUINO_LITTLEFS_ENABLE=1
