--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
-#platform_packages = framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.5
+platform = espressif32@6.5.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
@@ -22,5 +21,9 @@ extra_scripts =
 	post:scripts/build_react_app.py
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.0.0
-	bblanchon/ArduinoJson@^6.21.2
+	bblanchon/ArduinoJson
+	jasonlzt/FastLED
+	adafruit/RTClib@^2.1.4
 build_flags = -D PIO_FRAMEWORK_ARDUINO_LITTLEFS_ENABLE=1
+
+
