--- a/react-websocket-client/package.json
+++ b/react-websocket-client/package.json
@@ -14,14 +14,17 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.2",
     "bootstrap": "^5.3.3",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.7",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0",
+    "react-websocket-client": "file:",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.0.28",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.0.11",
